# amisrsynthdata

./: .readthedocs.yaml  .readthedocs.yml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Field.py  Ionosphere.py  README.md  README.rst  Radar.py  create_synth_data.py  example_synth_config.yaml  pfisr_synth_config.ini  pyproject.toml  requirements.txt  risrn_synth_config.ini  setup.cfg  setup.py  tutorial.ipynb
.github/workflows/: draft-pdf.yml  lint.yml  publish.yml  unit-tests.yml
amisrsynthdata/: Density.py  Ionosphere.py  Ionosphere_with_gemini.py  Radar.py  SyntheticData.py  Temperature.py  Velocity.py  create_synth_data.py  ionosphere.py  radar.py  syntheticdata.py
amisrsynthdata/state_functions/: __init__.py  density.py  temperature.py  velocity.py
docs/: conf.py  configfile.rst  index.rst  installation.rst  ionostate.rst  reference.rst  usage.rst
docs/source/: conf.py  configfile.rst  index.rst  installation.rst  ionostate.rst  usage.rst
manuscript/: paper.bib  paper.md
src/: __init__.py
src/amisrsynthdata/: beamcodes.h5  ionosphere.py  radar.py  syntheticdata.py
src/amisrsynthdata/beamcodes/: bcotable_risrc.txt
src/amisrsynthdata/state_functions/: density.py  gemini_utils.py  temperature.py  utils.py  velocity.py
tests/: config.yaml  state_functions_config.yaml  synthetic_data.h5  test_Ionosphere.py  test_Radar.py  test_SyntheticData.py  test_state_functions.py
